# Backend-Assignment

./: .gitignore  README.md  package.json  pnpm-lock.yaml
package/server/: .env.example  package.json  pyproject.toml
package/server/app/: main.py
package/server/app/apis/auth/: controller.py  router.py
package/server/app/apis/bookings/: controller.py  router.py
package/server/app/apis/fitness_class/: controller.py  router.py
package/server/app/core/: config.py  dependencies.py  logging_config.py  security.py
package/server/app/db/: session.py
package/server/app/models/: booking.py  fitness_class.py  user.py
package/server/app/schemas/: booking.py  fitness_class.py  user.py
package/server/tests/: conftest.py  test_auth.py  test_booking.py  test_classes.py  test_get_my_bookings.py
